# api-proxy

./: .gitignore  README.md  bg.bat  build.bat  fg.bat  make_cert.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
apiproxy/: __main__.py  install.py
apiproxy-ui/: README.md  angular.json  package-lock.json  package.json
apiproxy-ui/src/: index.html
apiproxy-ui/src/app/: app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
apiproxy-ui/src/app/components/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
apiproxy-ui/src/app/components/generator/: generator.html  generator.scss  generator.ts
apiproxy-ui/src/app/components/json-pad/: json-pad.html  json-pad.scss  json-pad.spec.ts  json-pad.ts
apiproxy-ui/src/app/derivatives/: format-json-pipe.ts
apiproxy-ui/src/app/services/: model.ts  service.ts
apiproxy-ui/src/app/utils/: restUtil.ts  utils.ts
apiproxy/generate/: __init__.py  consts.py  curl.py  dotnet.py  go_model.py  golang.py  java_model.py  modeler.py  naming.py  py_model.py  rust.py  spring_boot.py  ts_model.py
apiproxy/handler/: base_server.py  http_proxy.py  http_util.py  mapped_service.py
apiproxy/service/: api.py  app_state.py  certmgr.py  config.py  crud.py  engine.py  models.py  str_util.py
static/browser/: index.html  main-42BVITLM.js  main-ACX6F5SU.js  main-BR3MRMVO.js  main-HT54FNNZ.js  main-JQGPTO4B.js  main-SBFENVG4.js  main-UQYIEVB6.js
tests/: conftest.py  proxy-tests.txt
tests/generate/: test_java_model.py
tests/service/: test_rest.py  test_traffic.py
(+12 files in other folders)
