[project]
name = "apiproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "nltk>=3.9.4",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.38",
    "urllib3>=2.6.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
]
